# vizbuilder

./: README.md  pyproject.toml
scripts/: build_palettes.py
src/vizbuilder/: __init__.py  _colors.py  _lib.py  _scales.py  _types.py  _wip.py
tests/: doctests.py  examples.py
